[gd_scene load_steps=14 format=3 uid="uid://b7vwbwuc65tvv"]

[ext_resource type="Script" path="res://Levels/levls/Level4.gd" id="1_xn7sa"]
[ext_resource type="PackedScene" uid="uid://m4lrr2hix0il" path="res://Scenes/parallax_test.tscn" id="2_4332i"]
[ext_resource type="Texture2D" uid="uid://bbu0u8vmfm0em" path="res://UI Assets/Level UI/LevelUIBorder.png" id="2_a522q"]
[ext_resource type="PackedScene" uid="uid://cjpx0vk3f7et" path="res://Scenes/player/scenes/PlayerHealth.tscn" id="3_siarv"]
[ext_resource type="PackedScene" uid="uid://dahhm7i1flbxt" path="res://Scenes/player/scenes/player.tscn" id="3_xsnno"]
[ext_resource type="Resource" uid="uid://wx21prccd2s6" path="res://Resources/Player/player.tres" id="4_el60b"]
[ext_resource type="FontFile" uid="uid://crci25pyrnsv4" path="res://Font Files/BoldPixels.ttf" id="4_fv6tk"]
[ext_resource type="PackedScene" uid="uid://ck06iw04p5g65" path="res://Scenes/player/scenes/level_progress_bar.tscn" id="5_hd3e8"]
[ext_resource type="PackedScene" uid="uid://dq7owrkb3o5r3" path="res://Scenes/pause_menu.tscn" id="5_vpxhm"]

[sub_resource type="FontVariation" id="FontVariation_pkw15"]
base_font = ExtResource("4_fv6tk")
baseline_offset = 0.1

[sub_resource type="FontVariation" id="FontVariation_s5aqb"]
base_font = ExtResource("4_fv6tk")
baseline_offset = 0.1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4hui1"]
size = Vector2(58, 1090)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iewet"]
size = Vector2(1232, 56)

[node name="Level4" type="Node2D"]
script = ExtResource("1_xn7sa")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ColorRect" type="ColorRect" parent="Control/HBoxContainer"]
light_mask = 3
visibility_layer = 3
z_index = 1
layout_mode = 2
size_flags_horizontal = 3
color = Color(0, 0, 0, 1)

[node name="NinePatchRect" type="NinePatchRect" parent="Control/HBoxContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_a522q")
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="PlayerHealthBar" parent="Control/HBoxContainer/ColorRect/NinePatchRect" instance=ExtResource("3_siarv")]
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = 480.0
offset_right = 40.5
offset_bottom = 500.0
grow_vertical = 2
rotation = -1.5708
scale = Vector2(9, 6)

[node name="Label" type="Label" parent="Control/HBoxContainer/ColorRect/NinePatchRect"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 4.0
offset_right = 4.0
offset_bottom = 75.0
grow_horizontal = 2
theme_override_fonts/font = SubResource("FontVariation_pkw15")
theme_override_font_sizes/font_size = 60
text = "Health"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(1060, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorRect2" type="ColorRect" parent="Control/HBoxContainer"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 3
color = Color(0, 0, 0, 1)

[node name="NinePatchRect" type="NinePatchRect" parent="Control/HBoxContainer/ColorRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_a522q")
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="LevelProgressBar" parent="Control/HBoxContainer/ColorRect2/NinePatchRect" instance=ExtResource("5_hd3e8")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.5
offset_top = -60.0
offset_right = 40.5
offset_bottom = -40.0
grow_vertical = 0
rotation = -1.5708
scale = Vector2(9, 6)

[node name="Label" type="Label" parent="Control/HBoxContainer/ColorRect2/NinePatchRect"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 4.0
offset_right = 4.0
offset_bottom = 75.0
grow_horizontal = 2
theme_override_fonts/font = SubResource("FontVariation_s5aqb")
theme_override_font_sizes/font_size = 45
text = "Progress"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Parallax Test" parent="." instance=ExtResource("2_4332i")]

[node name="Borders" type="StaticBody2D" parent="." groups=["border"]]

[node name="BorderLeft" type="CollisionShape2D" parent="Borders" groups=["border"]]
position = Vector2(430, 540)
shape = SubResource("RectangleShape2D_4hui1")
one_way_collision_margin = 0.0

[node name="BorderRight" type="CollisionShape2D" parent="Borders" groups=["border"]]
position = Vector2(1490, 540)
shape = SubResource("RectangleShape2D_4hui1")
one_way_collision_margin = 0.0

[node name="BorderTop" type="CollisionShape2D" parent="Borders" groups=["border"]]
position = Vector2(960, -18)
shape = SubResource("RectangleShape2D_iewet")
one_way_collision_margin = 0.0

[node name="BorderBottom" type="CollisionShape2D" parent="Borders" groups=["border"]]
position = Vector2(960, 1098)
shape = SubResource("RectangleShape2D_iewet")
one_way_collision_margin = 0.0

[node name="Player" parent="." instance=ExtResource("3_xsnno")]
position = Vector2(960, 976)
stats = ExtResource("4_el60b")

[node name="Pause Menu" parent="." instance=ExtResource("5_vpxhm")]

[node name="NorthSpawn" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="SouthSpawn" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Spawnboss" type="Timer" parent="." groups=["enemy"]]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="NorthSpawn" to="." method="_on_north_spawn_timeout"]
[connection signal="timeout" from="NorthSpawn" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="SouthSpawn" to="." method="_on_south_spawn_timeout"]
[connection signal="timeout" from="Spawnboss" to="." method="_on_spawnboss_timeout"]
[connection signal="timeout" from="Spawnboss" to="." method="_on_spawn_boss_timeout"]
